Fixed incorrect display of the site on mobile devices

--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -30,6 +30,7 @@ body {
   background-color: var(--background-color);
   margin: 4px 0;
   padding: 120px 0;
+  overflow: hidden;
 }
 
 .title {
