--- a/src/assets/scss/blocks/instruction/_instruction-media.scss
+++ b/src/assets/scss/blocks/instruction/_instruction-media.scss
@@ -110,7 +110,7 @@
 @media screen and (max-width: 577px) {
   .instruction {
     position: relative;
-    padding: 80px 0 160px;
+    padding: 80px 0 40px;
   }
   .instruction__title {
     max-width: 400px;
@@ -130,15 +130,21 @@
     margin-bottom: 0;
   }
   .instruction-item__btn {
-    position: absolute;
-    bottom: 60px;
+    display: none;
   }
   .instruction-item__img {
     padding: 10px;
   }
+  .instruction__btn--new {
+    display: block;
+    margin-top: 40px;
+  }
 }
 
 @media screen and (max-width: 479px) {
+  .instruction {
+    padding-bottom: 20px;
+  }
   .instruction-item__step {
     --additional-info-fz: 12px;
     border-radius: 14px;
@@ -150,7 +156,7 @@
 
 @media screen and (max-width: 376px) {
   .instruction {
-    padding: 40px 0 100px;
+    padding: 40px 0 20px;
   }
   .instruction__title {
     margin-bottom: 36px;
