--- a/src/assets/scss/blocks/instruction/_instruction.scss
+++ b/src/assets/scss/blocks/instruction/_instruction.scss
@@ -72,3 +72,6 @@
     }
   }
 }
+.instruction__btn--new {
+  display: none;
+}
